betterCodeBlocks: fix label and word wrap

--- a/src/betterCodeblocks/style.css
+++ b/src/betterCodeblocks/style.css
@@ -20,6 +20,7 @@
   white-space: pre;
 }
 
+div[class^="codeContainer_"] > .hljs,
 .hljs[class*="wordWrap_"] {
   .bcb-number {
     word-wrap: normal !important;
